<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.4.2.RELEASE</version>
    </parent>

    <groupId>org.xcolab.view</groupId>
    <artifactId>xcolab-view</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>xcolab-view</name>
    <description>Main view application for the XCoLab</description>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <spring.version>4.3.4.RELEASE</spring.version>
        <spring-boot.version>1.4.2.RELEASE</spring-boot.version>

        <!-- Assets -->
        <sass-maven-plugin.version>2.22</sass-maven-plugin.version>

        <!-- Core -->
        <slf4j-api.version>1.7.21</slf4j-api.version>
        <commons-lang3.version>3.5</commons-lang3.version>
        <commons-collections4.version>4.1</commons-collections4.version>
        <junit.version>4.12</junit.version>
        <rewrite.version>3.4.1.Final</rewrite.version>

        <!-- JSP -->
        <sitemesh.version>3.0.1</sitemesh.version>

        <!-- Service communication -->
        <ehcache.version>3.1.3</ehcache.version>
        <httpclient.version>4.5.2</httpclient.version>
        <jackson-databind.version>2.8.5</jackson-databind.version>

        <!-- Misc -->
        <jsoup.version>1.10.1</jsoup.version>
        <json.version>20160212</json.version>
        <google-api.version>1.22.0</google-api.version>
    </properties>

    <dependencies>
        <!-- Spring boot dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${spring-boot.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>

        <!-- JSP dependencies -->
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-jasper</artifactId>
            <!-- defined by spring -->
            <!--suppress MavenModelInspection -->
            <version>${tomcat.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <!-- defined by spring -->
            <!--suppress MavenModelInspection -->
            <version>${jstl.version}</version>
        </dependency>
        <dependency>
            <groupId>org.sitemesh</groupId>
            <artifactId>sitemesh</artifactId>
            <version>${sitemesh.version}</version>
        </dependency>

        <!-- Core dependencies -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>${commons-collections4.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>

        <!-- url rewriting-->
        <dependency>
            <groupId>org.ocpsoft.rewrite</groupId>
            <artifactId>rewrite-servlet</artifactId>
            <version>${rewrite.version}</version>
        </dependency>

        <!-- Misc dependencies-->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4</version>
        </dependency>


        <!-- XCoLab micro service dependencies -->
        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>admin-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>members-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>contestproposal-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.xcolab</groupId>
            <artifactId>entity-utils</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>sharedcolab-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>files-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>ballons-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>tracking-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>contents-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>emails-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.google.http-client</groupId>
            <artifactId>google-http-client-jackson</artifactId>
            <version>${google-api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.http-client</groupId>
            <artifactId>google-http-client</artifactId>
            <version>${google-api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client</artifactId>
            <version>${google-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>filtering-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>flagging-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
		<dependency>
            <groupId>org.xcolab.microservices.clients</groupId>
            <artifactId>search-client</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>net.sf.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>2.3</version>
        </dependency>
        <dependency>
            <groupId>com.ocpsoft</groupId>
            <artifactId>ocpsoft-pretty-time</artifactId>
            <version>1.0.7</version>
        </dependency>
        <dependency>
            <groupId>edu.mit.cci.roma</groupId>
            <artifactId>client</artifactId>
            <version>1.4-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson-databind.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>1.0.0</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>read-project-properties</goal>
                        </goals>
                        <configuration>
                            <files>
                                <file>${user.home}/.xcolab.application.properties</file>
                            </files>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>nl.geodienstencentrum.maven</groupId>
                <artifactId>sass-maven-plugin</artifactId>
                <version>${sass-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>update-stylesheets</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <useBourbon>true</useBourbon>
                    <useCompass>true</useCompass>
                    <resources>
                        <resource>
                            <source>
                                <directory>${basedir}/src/main/resources/static/sass</directory>
                                <includes>
                                    <include>*.scss</include>
                                </includes>
                                <excludes />
                            </source>
                            <destination>${basedir}/src/main/resources/dist/css</destination>
                        </resource>
                    </resources>
                    <sassOptions>
                        <style>:compressed</style>
                    </sassOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>